--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html, body {
 	background: #222;
     text-shadow: 0 1px 0 #000;
     overflow: hidden;
+    -webkit-font-smoothing: antialised;
 }
 
 a {
